RESOLVED FIXED46157
Fix "operands of ? are integers of different signs" clang warnings
https://bugs.webkit.org/show_bug.cgi?id=46157
Summary Fix "operands of ? are integers of different signs" clang warnings
Nico Weber
Reported 2010-09-20 19:03:58 PDT
Fix "operands of ? are integers of different signs" clang warnings
Attachments
Patch (2.84 KB, patch)
2010-09-20 19:04 PDT, Nico Weber
abarth: review+
commit-queue: commit-queue-
Nico Weber
Comment 1 2010-09-20 19:04:44 PDT
Adam Barth
Comment 2 2010-09-20 19:06:40 PDT
Comment on attachment 68175 [details] Patch ok
Eric Seidel (no email)
Comment 3 2010-09-20 19:46:33 PDT
This is gonna fail the commit-queue due to the second OOPS in the ChangeLog. You should explain what tests you added or why testing is impossible/impractical.
Eric Seidel (no email)
Comment 4 2010-09-20 19:47:06 PDT
In the case of a build fix, we sometimes just delete that line or say "Build fix, no tests needed."
WebKit Commit Bot
Comment 5 2010-09-20 20:01:58 PDT
Comment on attachment 68175 [details] Patch Rejecting patch 68175 from commit-queue. Failed to run "[u'git', u'svn', u'dcommit']" exit_code: 1 Last 500 characters of output: ommitting to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/platform/graphics/mac/ComplexTextController.cpp M WebCore/rendering/RenderBox.cpp A repository hook failed: Commit blocked by pre-commit hook (exit code 1) with output: svnlook: Can't write to stream: Broken pipe The following ChangeLog files contain OOPS: trunk/WebCore/ChangeLog Please don't ever say "OOPS" in a ChangeLog file. at /usr/local/git/libexec/git-core/git-svn line 558 Full output: http://queues.webkit.org/results/4046095
Adam Barth
Comment 6 2010-09-20 20:08:52 PDT
Nico Weber
Comment 7 2010-09-20 20:46:38 PDT
Thanks, abarth!
Note You need to log in before you can comment on or make changes to this bug.