2010-09-20  Nico Weber  <thakis@chromium.org>

Reviewed by Adam Barth.

        Fix "operands of ? are integers of different signs" clang warnings
        https://bugs.webkit.org/show_bug.cgi?id=46157

        * platform/graphics/mac/ComplexTextController.cpp:
        (WebCore::ComplexTextController::advance):
        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::calcHeight):


Canonical link: https://commits.webkit.org/58620@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67915 268f45cc-cd09-0410-ab3c-d52691b4dbfc